--- a/Author.Android/Author.Android.csproj
+++ b/Author.Android/Author.Android.csproj
@@ -218,7 +218,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Acr.UserDialogs">
-      <Version>7.1.0.475</Version>
+      <Version>7.1.0.483</Version>
     </PackageReference>
     <PackageReference Include="AndHUD">
       <Version>1.4.2</Version>
@@ -227,7 +227,7 @@
       <Version>1.4.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.NETCore.Platforms">
-      <Version>5.0.1</Version>
+      <Version>5.0.2</Version>
     </PackageReference>
     <PackageReference Include="NETStandard.Library">
       <Version>2.0.3</Version>
@@ -325,116 +325,116 @@
     <PackageReference Include="System.Threading.Timer">
       <Version>4.3.0</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Android.Arch.Core.Common">
-      <Version>1.1.1.3</Version>
+    <PackageReference Include="Xamarin.AndroidX.Arch.Core.Common">
+      <Version>2.1.0.8</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Android.Arch.Core.Runtime">
-      <Version>1.1.1.3</Version>
+    <PackageReference Include="Xamarin.AndroidX.Arch.Core.Runtime">
+      <Version>2.1.0.8</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Android.Arch.Lifecycle.Common">
-      <Version>1.1.1.3</Version>
+    <PackageReference Include="Xamarin.AndroidX.Lifecycle.Common">
+      <Version>2.3.1</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Android.Arch.Lifecycle.LiveData">
-      <Version>1.1.1.3</Version>
+    <PackageReference Include="Xamarin.AndroidX.Lifecycle.LiveData">
+      <Version>2.3.1</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Android.Arch.Lifecycle.LiveData.Core">
-      <Version>1.1.1.3</Version>
+    <PackageReference Include="Xamarin.AndroidX.Lifecycle.LiveData.Core">
+      <Version>2.3.1</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Android.Arch.Lifecycle.Runtime">
-      <Version>1.1.1.3</Version>
+    <PackageReference Include="Xamarin.AndroidX.Lifecycle.Runtime">
+      <Version>2.3.1.1</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Android.Arch.Lifecycle.ViewModel">
-      <Version>1.1.1.3</Version>
+    <PackageReference Include="Xamarin.AndroidX.Lifecycle.ViewModel">
+      <Version>2.3.1</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Android.Support.Animated.Vector.Drawable">
-      <Version>28.0.0.3</Version>
+    <PackageReference Include="Xamarin.AndroidX.VectorDrawable.Animated">
+      <Version>1.1.0.7</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Android.Support.Annotations">
-      <Version>28.0.0.3</Version>
+    <PackageReference Include="Xamarin.AndroidX.Annotation">
+      <Version>1.2.0</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Android.Support.AsyncLayoutInflater">
-      <Version>28.0.0.3</Version>
+    <PackageReference Include="Xamarin.AndroidX.AsyncLayoutInflater">
+      <Version>1.0.0.7</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Android.Support.Collections">
-      <Version>28.0.0.3</Version>
+    <PackageReference Include="Xamarin.AndroidX.Collection">
+      <Version>1.1.0.7</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Android.Support.Compat">
-      <Version>28.0.0.3</Version>
+    <PackageReference Include="Xamarin.AndroidX.Core">
+      <Version>1.3.2.3</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Android.Support.CoordinaterLayout">
-      <Version>28.0.0.3</Version>
+    <PackageReference Include="Xamarin.AndroidX.CoordinatorLayout">
+      <Version>1.1.0.7</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Android.Support.Core.UI">
-      <Version>28.0.0.3</Version>
+    <PackageReference Include="Xamarin.AndroidX.Legacy.Support.Core.UI">
+      <Version>1.0.0.8</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Android.Support.Core.Utils">
-      <Version>28.0.0.3</Version>
+    <PackageReference Include="Xamarin.AndroidX.Legacy.Support.Core.Utils">
+      <Version>1.0.0.7</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Android.Support.CursorAdapter">
-      <Version>28.0.0.3</Version>
+    <PackageReference Include="Xamarin.AndroidX.CursorAdapter">
+      <Version>1.0.0.7</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Android.Support.CustomTabs">
-      <Version>28.0.0.3</Version>
+    <PackageReference Include="Xamarin.AndroidX.Browser">
+      <Version>1.3.0.5</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Android.Support.CustomView">
-      <Version>28.0.0.3</Version>
+    <PackageReference Include="Xamarin.AndroidX.CustomView">
+      <Version>1.1.0.6</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Android.Support.Design">
-      <Version>28.0.0.3</Version>
+    <PackageReference Include="Xamarin.Google.Android.Material">
+      <Version>1.3.0.1</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Android.Support.DocumentFile">
-      <Version>28.0.0.3</Version>
+    <PackageReference Include="Xamarin.AndroidX.DocumentFile">
+      <Version>1.0.1.7</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Android.Support.DrawerLayout">
-      <Version>28.0.0.3</Version>
+    <PackageReference Include="Xamarin.AndroidX.DrawerLayout">
+      <Version>1.1.1.2</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Android.Support.Fragment">
-      <Version>28.0.0.3</Version>
+    <PackageReference Include="Xamarin.AndroidX.Fragment">
+      <Version>1.3.2</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Android.Support.Interpolator">
-      <Version>28.0.0.3</Version>
+    <PackageReference Include="Xamarin.AndroidX.Interpolator">
+      <Version>1.0.0.7</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Android.Support.Loader">
-      <Version>28.0.0.3</Version>
+    <PackageReference Include="Xamarin.AndroidX.Loader">
+      <Version>1.1.0.7</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Android.Support.LocalBroadcastManager">
-      <Version>28.0.0.3</Version>
+    <PackageReference Include="Xamarin.AndroidX.LocalBroadcastManager">
+      <Version>1.0.0.7</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Android.Support.Media.Compat">
-      <Version>28.0.0.3</Version>
+    <PackageReference Include="Xamarin.AndroidX.Media">
+      <Version>1.3.0</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Android.Support.Print">
-      <Version>28.0.0.3</Version>
+    <PackageReference Include="Xamarin.AndroidX.Print">
+      <Version>1.0.0.7</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Android.Support.SlidingPaneLayout">
-      <Version>28.0.0.3</Version>
+    <PackageReference Include="Xamarin.AndroidX.SlidingPaneLayout">
+      <Version>1.1.0.2</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Android.Support.SwipeRefreshLayout">
-      <Version>28.0.0.3</Version>
+    <PackageReference Include="Xamarin.AndroidX.SwipeRefreshLayout">
+      <Version>1.1.0.2</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Android.Support.Transition">
-      <Version>28.0.0.3</Version>
+    <PackageReference Include="Xamarin.AndroidX.Transition">
+      <Version>1.4.0.1</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Android.Support.v4">
-      <Version>28.0.0.3</Version>
+    <PackageReference Include="Xamarin.AndroidX.Legacy.Support.V4">
+      <Version>1.0.0.7</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Android.Support.v7.AppCompat">
-      <Version>28.0.0.3</Version>
+    <PackageReference Include="Xamarin.AndroidX.AppCompat">
+      <Version>1.2.0.7</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Android.Support.v7.CardView">
-      <Version>28.0.0.3</Version>
+    <PackageReference Include="Xamarin.AndroidX.CardView">
+      <Version>1.0.0.8</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Android.Support.v7.RecyclerView">
-      <Version>28.0.0.3</Version>
+    <PackageReference Include="Xamarin.AndroidX.RecyclerView">
+      <Version>1.2.0</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Android.Support.Vector.Drawable">
-      <Version>28.0.0.3</Version>
+    <PackageReference Include="Xamarin.AndroidX.VectorDrawable">
+      <Version>1.1.0.7</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Android.Support.VersionedParcelable">
-      <Version>28.0.0.3</Version>
+    <PackageReference Include="Xamarin.AndroidX.VersionedParcelable">
+      <Version>1.1.1.7</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Android.Support.ViewPager">
-      <Version>28.0.0.3</Version>
+    <PackageReference Include="Xamarin.AndroidX.ViewPager">
+      <Version>1.0.0.7</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Essentials">
       <Version>1.6.1</Version>
@@ -442,9 +442,7 @@
     <PackageReference Include="Xamarin.Forms">
       <Version>5.0.0.2012</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Plugin.FilePicker">
-      <Version>2.1.41</Version>
-    </PackageReference>
+    <PackageReference Include="Xamarin.AndroidX.Migration" Version="1.0.8" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\ic_import_export.xml" />
